# KursPy2

./: main.py  pyproject.toml
data/: suitable_vacancies.json  utils.py  vacancy_api.py  vacancy_job.py
src/: utils.py  vacancy_api.py  vacancy_job.py  vacancy_json.py
tests/: conftest.py  data_test.json  test_utils.py  test_vacancy_api.py  test_vacancy_job.py  test_vacancy_json.py
