[tool.poetry]
name = "kurspy2"
version = "0.1.0"
description = ""
authors = ["Yuliya Kuznetsova <juliakuznetsova001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
